# hyprland_workspace_display

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  symbols.rs  workspace.rs
