[package]
name = "hyprland_workspace_display"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "hyprspacedp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive", "wrap_help"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
