[package]
name = "hyprland_workspace_display"
description = "Command line utility to display hyprland workspaces."
homepage = "https://github.com/d-hain/hyprland_workspace_display"
repository = "https://github.com/d-hain/hyprland_workspace_display"
license-file = "LICENSE"
version = "0.2.0"
edition = "2021"
publish = true

[[bin]]
name = "hyprspacedp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive", "wrap_help"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
